--- a/src/components/PlaylistsItemCard.astro
+++ b/src/components/PlaylistsItemCard.astro
@@ -1,5 +1,6 @@
 ---
 import type { Playlist } from "@lib/data";
+import { CardPlayButton } from "@components/CardPlayButton";
 
 interface Props {
   playlist: Playlist;
@@ -12,25 +13,39 @@ const { id, cover, title, artists, color } = playlist;
 const artisString = artists.join(", ");
 ---
 
-<a
-  href={`/playlist/${id}`}
-  class="playlist-item flex relative p-2 overflow-hidden gap-2 pb-6 rounded-md hover:bg-zinc-800 transition-all duration-300 shadow-lg hover:shadow-xl bg-zinc-500/30 w-44 flex-col"
+<article
+  class="group relative hover:bg-zinc-800 shadow-lg hover:shadow-xl bg-zinc-500/30 rounded-md transition-all duration-300"
 >
-  <picture class="aspect-square w-full h-auto flex-none">
-    <img
-      src={cover}
-      alt={`cover of ${title} by ${artisString}`}
-      class="object-cover w-full h-full rounded-md"
-      style={{ "--aspect-ratio": "1" }}
-      transition:name=`playlist ${id} image`
-    /></picture
+  <div
+    class=`
+    absolute right-4 bottom-20 translate-y-4 transition-all duration-500 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 z-10
+  `
   >
-  <div class="flex flex-auto flex-col px-2">
-    <h4 class="text-white text-sm">
-      {title}
-    </h4>
-    <span class="text-xs text-gray-400">
-      {artisString}
-    </span>
+    <CardPlayButton id={id} client:visible />
   </div>
-</a>
+  <a
+    href={`/playlist/${id}`}
+    class="playlist-item flex relative p-2 overflow-hidden gap-2 pb-6 transition-all duration-300 w-44 flex-col"
+    transition:name=`playlist ${id} box`
+  >
+    <picture class="aspect-square w-full h-auto flex-none">
+      <img
+        src={cover}
+        alt={`cover of ${title} by ${artisString}`}
+        class="object-cover w-full h-full rounded-md"
+        transition:name=`playlist ${id} image`
+      /></picture
+    >
+    <div class="flex flex-auto flex-col px-2">
+      <h4 class="text-white text-sm" transition:name=`playlist ${id} title`>
+        {title}
+      </h4>
+      <span
+        class="text-xs text-gray-400"
+        transition:name=`playlist ${id} artists`
+      >
+        {artisString}
+      </span>
+    </div>
+  </a>
+</article>
