--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
+import { Player } from "@/components/Player";
 import AsideMenu from "../components/AsideMenu.astro";
+import { ViewTransitions } from "astro:transitions";
 interface Props {
   title: string;
 }
@@ -16,16 +18,23 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <ViewTransitions fallback="none" />
   </head>
   <body>
     <div id="app" class="relative h-screen p-2 gap-2">
       <aside class="[grid-area:aside] flex-col flex overflow-y-auto">
         <AsideMenu />
       </aside>
-      <main class="[grid-area:main] rounded-lg bg-zinc-900 overflow-y-auto">
+
+      <main
+        class="[grid-area:main] rounded-lg bg-zinc-900 overflow-y-auto w-full"
+      >
         <slot />
       </main>
-      <footer class="[grid-area:player] min-h-[100px]">PLAYER</footer>
+
+      <footer class="[grid-area:player] h-[80px]">
+        <Player client:load transition:name="media-player" transition:persist />
+      </footer>
     </div>
     <style>
       #app {
