--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import { playlists } from "@lib/data";
 import PlaylistsItemCard from "@components/PlaylistsItemCard.astro";
+import Greating from "@components/Greeting.svelte";
 ---
 
 <Layout title="Spoty Clone">
@@ -11,17 +12,16 @@ import PlaylistsItemCard from "@components/PlaylistsItemCard.astro";
   >
     <!-- <Pageheader /> -->
     <div class="relative z-10 px-6 pt-10">
-      <!-- <Greatings /> -->
-      <h1 class="text-4xl font-bold">Buenos dias</h1>
+      <Greating />
       <div class="flex flex-wrap mt-6 gap-4">
         {playlists.map((playlist) => <PlaylistsItemCard playlist={playlist} />)}
       </div>
+      <div
+        class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80 -z-[1]"
+      >
+      </div>
     </div>
-    <div
-      class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80"
-    >
-    </div>
+
+    <style></style>
   </div>
 </Layout>
-
-<style></style>
